--- a/about/index.html
+++ b/about/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>About - thawt.io</title>
+  <title>About - one.thawt.io</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="keywords" content="">
-  <link rel="canonical" href="http://thawt.io/about/">
+  <link rel="canonical" href="http://one.thawt.io/about/">
 
   
   
@@ -19,7 +19,7 @@
   
   
 
-  <link rel="stylesheet" type="text/css" href="http://thawt.io/css/combined-min.css">
+  <link rel="stylesheet" type="text/css" href="http://one.thawt.io/css/combined-min.css">
 
 </head>
 <body class="">
@@ -28,11 +28,11 @@
   <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="http://thawt.io" class="site-title">thawt.io</a>
+      <a href="http://one.thawt.io" class="site-title">one.thawt.io</a>
       <nav class="site-nav right">
-      <a href="http://thawt.io/about/">About</a>
-<a href="http://thawt.io/tags">Tags</a>
-<a href="http://thawt.io/contact/">Contact</a>
+      <a href="http://one.thawt.io/about/">About</a>
+<a href="http://one.thawt.io/tags">Tags</a>
+<a href="http://one.thawt.io/contact/">Contact</a>
 
 </form>
 
@@ -65,7 +65,7 @@
       <div class="p2 wrap">
         <div class="measure mt1 center">
       <nav class="social-icons icons">
-<a class="fa fa-rss rss" href="http://thawt.io/index.xml"></a>
+<a class="fa fa-rss rss" href="http://one.thawt.io/index.xml"></a>
 
 </nav>
 
@@ -78,7 +78,7 @@
     </footer>
 
     
-    <script src="http://thawt.io/js/highlight.pack.js"></script>
+    <script src="http://one.thawt.io/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     
