--- a/about/index.html
+++ b/about/index.html
@@ -57,6 +57,8 @@
 
 <p>twitter: <a href="https://twitter.com/one_thawt">one_thawt</a></p>
 
+<p>reddit: <a href="https://www.reddit.com/user/one_thawt/">/user/one_thawt</a> and <a href="https://www.reddit.com/r/onethawt">/r/onethawt</a></p>
+
       </article>
     </div>
   </div>
@@ -66,6 +68,8 @@
         <div class="measure mt1 center">
       <nav class="social-icons icons">
 <a class="fa fa-rss rss" href="http://one.thawt.io/index.xml"></a>
+
+<a class="fa fa-twitter twitter" href="https://twitter.com/one_thawt"></a>
 
 </nav>
 
