--- a/404.html
+++ b/404.html
@@ -58,6 +58,8 @@
       <nav class="social-icons icons">
 <a class="fa fa-rss rss" href="http://one.thawt.io/index.xml"></a>
 
+<a class="fa fa-twitter twitter" href="https://twitter.com/one_thawt"></a>
+
 </nav>
 
           <small>
